--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -8,15 +8,19 @@
             <ul>
                 <% products.forEach(p => { %>
                     <li>
-                        <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                        <p><%= p.title %> (<%= p.quantity %>)</p>
                         <form action="/cart-delete-item" method="POST">
-                            <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                            <input type="hidden" value="<%= p._id %>" name="productId">
                             <button class="btn" type="submit">Delete</button>
                         </form>
                     </li>
                 <% }) %>
             </ul>
-        
+            <div class="centered">
+                <form action="/create-order" method="POST">
+                    <button class="btn" type="submit">Order Now</button>
+                </form>
+            </div>
             <% } else { %>
                 <h1>No Products In Cart</h1>
             <% } %>
