--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-   <%- include('../includes/navigation.ejs') %>
+   <%- include('../includes/nav.ejs') %>
 
     <main>
         <form class="login-form" action="/login" method="POST">
