--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -13,7 +13,7 @@
                 <input type="text" name="title" id="title">
             </div>
             <div class="form-control">
-                <label for="imageUrl">Image URL</label>
+                <label for="imageUrl">Image Url</label>
                 <input type="text" name="imageUrl" id="imageUrl">
             </div>
             <div class="form-control">
