--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -25,7 +25,7 @@
                 <textarea name="description" id="description" rows="5"><%= product.description %></textarea>
             </div>
             <input type="hidden" value="<%= product._id %>" name="productId">
-
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Update Product</button>
         </form>
     </main>
