--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -7,14 +7,21 @@
    <%- include('../includes/nav.ejs') %>
 
     <main>
-        <form class="product-form" action="/admin/add-product" method="POST">
+        <form class="product-form" action="/admin/add-product" method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image Url</label>
                 <input type="text" name="imageUrl" id="imageUrl">
+            </div> -->
+            <div class="form-control">
+                <label for="image">Image</label>
+                <input
+                    type="file"
+                    name="image"
+                    id="image" >
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
