--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -35,7 +35,7 @@
             <button class="btn" type="submit">Login</button>
         </form>
         <div class="centered">
-            <a href="/reset">Rest Password</a>
+            <a href="/reset">Reset Password</a>
         </div> 
     </main>
 <%- include('../includes/end.ejs') %>
